[gd_scene load_steps=2 format=3 uid="uid://b61avys25j47"]

[ext_resource type="Script" uid="uid://cftp62ahumhhc" path="res://decades/1980s/battle/CombatHUD1980.gd" id="1_8ayvh"]

[node name="CombatHud1980" type="CanvasLayer"]
script = ExtResource("1_8ayvh")

[node name="MagicMenu" type="Window" parent="."]
size = Vector2i(400, 300)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="MagicMenu"]
offset_right = 40.0
offset_bottom = 40.0

[node name="EnemyInfo" type="GridContainer" parent="."]
offset_left = 950.0
offset_top = 10.0
offset_right = 1130.0
offset_bottom = 210.0
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Panel" type="Panel" parent="."]
offset_left = 200.0
offset_top = 750.0
offset_right = 200.0
offset_bottom = 750.0
scale = Vector2(2, 2)

[node name="PartyInfo" type="GridContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 25.0
offset_top = 620.0
offset_right = 106.0
offset_bottom = 768.0
scale = Vector2(2, 2)
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Atacar"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Magia"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Defender"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fugir"

[node name="Button5" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="LogPanel" type="Panel" parent="."]
offset_left = 1250.0
offset_top = 600.0
offset_right = 1290.0
offset_bottom = 640.0
scale = Vector2(1.8, 1.8)

[node name="LogTextEdit" type="TextEdit" parent="LogPanel"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 0
offset_right = 250.0
offset_bottom = 200.0
autowrap_mode = 1
caret_blink_interval = 0.21

[node name="WindowTargetSelection" type="Window" parent="."]

[node name="VBoxContainerTargets" type="VBoxContainer" parent="WindowTargetSelection"]
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemWindow" type="Window" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="ItemWindow"]
offset_right = 40.0
offset_bottom = 40.0
